--- a/src/main/res/layout/content.xml
+++ b/src/main/res/layout/content.xml
@@ -15,7 +15,6 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello, World!"
-        />
+        android:text="Hello, World!" />
 
 </RelativeLayout>
